<resources>
    <string name="app_name">Moon Dreams</string>
    <string name="title_home">Home</string>
    <string name="sonhos">Dreams</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="novo">New Dream</string>
    <string name="titulo_do_sonho">Dream title</string>
    <string name="escolher_a_data">Choose date</string>
    <string name="qual_foi_o_sonho">What was the dream?</string>
    <string name="gravar">Save</string>
    <string name="copia_de_seguran_a">Settings</string>
    <string name="oficheirovaiserguardadoondeescolher">The file will be saved in choosed directory</string>
    <string name="copiadeseguranca">Backup</string>
    <string name="pretendesfazercopiadeseguranca">Do you want to make a backup?</string>
    <string name="ok">OK</string>
    <string name="cancelar">Cancel</string>
    <string name="foifeitaumacopiadeseguranca">Backup completed</string>
    <string name="backup">Backup</string>
    <string name="restaurar">Restore</string>
    <string name="restaurar_de_ficheiro">File Restore</string>
    <string name="backup_para_ficheiro">Backup to file</string>
    <string name="restaurar_da_nuvem">Cloud Restore</string>
    <string name="backup_para_a_nuvem">Backup to cloud</string>
    <string name="ficheiroinvalido">Invalid File</string>
    <string name="restaurocompleto">Dreams restore Completed</string>
    <string name="backup_para_ficheiro_que_da_para_ler">Backup to file that you can read</string>
    <string name="oficheirovaidarparalernormalmente">The file will be readable by you</string>
    <string name="oficheirovaiserguardadonumaformaespecifica">The file will be saved in a special format to later it can be restored</string>
    <string name="escolheradata">Choose date</string>
    <string name="sonhogravadocomsucesso">Dreams successfully saved</string>
    <string name="escreveosonho">Write the dream</string>
    <string name="escreveotitulodosonho">Write the tittle of the dream</string>
    <string name="escolheadatadosonho">Choose date of the dream</string>
    <string name="escolhedata">Choose date</string>
    <string name="copiadesegurancacompleta">Backup completed</string>
    <string name="thanksforyourdonation">\n\n Thanks for your donation :D</string>
    <string name="donate">Donate</string>
    <string name="naoteesquecasdeescreverossonhos">Dont forget to write the dreams</string>
    <string name="notificacaodesonhos">Dreams notification</string>
    <string name="notificacaoparanaoesquecerdeescreverossonhos">Notification to not forget to write the dreams</string>
    <string name="escolheadata">Choose session date</string>
    <string name="escolheahora">Choose the time</string>
    <string name="relogioprogramado">Clock scheduled</string>
    <string name="program_clock_to_meditate">Program Notification to write the dreams</string>
</resources>
